--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>{{ name }} 的观影列表</title>
+		<title>{{ user.name }} 的观影列表</title>
 		<link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}">
         <link type="text/css" rel="stylesheet" href="{{url_for('static',filename='style.css')}}">
 	</head>
@@ -10,7 +10,7 @@
 
 		<h2>
 			<img alt="Avatar" class="avatar" src="{{ url_for('static', filename='images/avatar.png') }}">
-			{{ name }} 的观影列表
+			{{ user.name }} 的观影列表
 		</h2> {# 使用 length
 过滤器获取 movies 变量的长度 #}
 		<p>{{ movies|length }} 条记录</p>
